# cpp20-features-tests

./: README.md
attributes/: likely_unlikely.cpp  no_unique_address.cpp  nodiscard.cpp
designated_initialization/: aggregate_initialization.cpp  named_initialization.cpp
keywords/: consteval.cpp  constinit.cpp
lambdas/: implicit-this.cpp  template-params.cpp  unevaluated-contexts.cpp
misc/: enum-local.cpp  range-based.cpp  virtual-constexpr.cpp  volatile.cpp
modules/: CMakeLists.txt  README.md  main.cpp  mathm.cpp
ordering/: compile-time.cpp  compiler-generated.cpp  ordering-before.cpp  ordering-since.cpp  pointer-case.cpp  priorities.cpp
stl/arithmetic/: bit-manipulation.cpp  math-constants.cpp  midpoint-linear.cpp  safe-comparison.cpp
stl/containers/: array-creation.cpp  constexpr-improvments.cpp  contains_associative_containers.cpp  erase_if.cpp  string_prefix_suffix.cpp
stl/format/: extensibility.cpp  principles.cpp
stl/ranges/: adaptors.cpp  algo-on-containers.cpp  concepts.cpp  projections.cpp
stl/span/: addressing_elems.cpp  automatic-size-deduction.cpp  generalities.cpp  init_from_pointer.cpp  modifying_elems.cpp  reallocations_management.cpp
stl/time/: calendar-dates.cpp  time-of-day.cpp  time-zones.cpp
templates/: cond-exp-cstr.cpp  non-type-params.cpp
